[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_player"]
[ext_resource type="Texture2D" path="res://assets/textures/circle.svg" id="2_circle"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 100.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_default"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 1
collision_mask = 22
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
texture = ExtResource("2_circle")
scale = Vector2(0.625, 0.625)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 1
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hitbox")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_pickup")

[node name="WeaponMount" type="Node2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_default")
}
